--- a/tazapp/src/main/res/values/strings.xml
+++ b/tazapp/src/main/res/values/strings.xml
@@ -147,6 +147,8 @@
     <string name="toast_data_folder_migration_not_enough_space">Nicht genügend Speicherplatz bei %s</string>
 
     <string name="error_report_request_log_dialog_message"><b>Vielen Dank, dass Sie einen Fehler melden möchten.</b>\n\nDamit wir möglichst viele Informationen zur Fehlerbehebung haben, aktivieren Sie bitte die Option <b>Protokoll schreiben</b>.\n\nAnschließend sollten Sie wenn möglich den Fehler reproduzieren und dann erneut auf <b>Fehler melden</b> klicken um Ihr installiertes Mail-Programm zu öffnen. Wir bitten Sie die fehlenden Informationen möglichst <b>genau und umfassend</b> auszufüllen und uns anschließend die Mail zuzusenden.\n\n<b>Vielen Dank für Ihre Unterstützung.</b></string>
+    <string name="error_report_request_log_activate">Protkoll schreiben aktivieren</string>
+    <string name="error_report_request_log_ok_without">Ohne Protkoll senden</string>
 
     <string name="download_title_paper">%1$s vom %2$s</string>
     <string name="download_title_resource">zusätzlich benötigte Dateien</string>
